-implemented PWA - fixed visual issue occuring on iOS

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -129,15 +129,13 @@ app-game-token.loser {
 
   app-game-token.selected {
     pointer-events: none;
-    transform: translate(-50%, -170%);
     z-index: 5;
     width: 35%;
-    padding-top: min(13rem, 35%);
-    max-width: 13rem;
+    transform: translate(-50%, -170%) scale(1.3, 1.3);
   }
 
   app-game-token.selected.choiceDisplay {
-    transform: translate(-120%, -220%);
+    transform: translate(-140%, -270%) scale(1.3, 1.3);
   }
 }
 
